src/components/gwic-content-nav/_gwic-content-nav.scss
.gwic-sub-navigation {
  &__list {
    @extend %gwic-pl-navigation-list;
    height: 0;
    overflow: hidden;
    
    @include breakpoint('md') {  
      height: auto;

    }    
  }

  .gwic-sub-navigation-btn {
    @extend %gwic-menu-btn;
    
    &__icon {
      @extend %gwic-menu-btn-icon;
    }
  
    &__sub {
      @extend %gwic-menu-button-sub;
    }
  }

  &__close {
    @extend %gwic-nav-close;
  }
  
  &--open {
    .gwic-sub-navigation__list {
      height: auto;
    } 

    .gwic-sub-navigation-btn {
      display: none;
    }

    .gwic-sub-navigation__close {
      display: block;
    }
  }

  &-btn {
    @extend %gwic-menu-btn;
  }

  &__btn-ctr {
    display: flex;
    justify-content: flex-end;

    @include breakpoint('md') {  
      display: none;
    }   
  }
}

.gwic-sub-navigation__close {
  display: none;
}

.theme--dark {
  .nsw-section-title,
  .gwic-navigation__link {
    color: $white;
  }

  .gwic-navigation__link {
    padding-left: 0;
  }
}

.gwic-sub-navigation.no-collapse {
  .gwic-sub-navigation__btn-ctr {
    display: none;
  }

  .gwic-sub-navigation__list {
    height: auto;
    margin-top: 3em;
  }
}

